kustomize/overlays/uat/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: specify
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: specify
        volumeMounts:
        - name: sso-settings
          mountPath: /opt/specify7/uat_sso_settings.py
          subPath: uat_sso_settings.py
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "3Gi"
            cpu: "1000m"
      volumes:
      - name: sso-settings
        configMap:
          name: sso-settings
