kustomize/overlays/uat/specify-worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: specify-worker
spec:
  template:
    spec:
      containers:
      - name: specify-worker
        volumeMounts:
        - name: sso-settings
          mountPath: /opt/specify7/uat_sso_settings.py
          subPath: uat_sso_settings.py
          readOnly: true
      volumes:
      - name: sso-settings
        configMap:
          name: sso-settings
